--- a/packages/ag-grid-community/src/pagination/paginationComp.css
+++ b/packages/ag-grid-community/src/pagination/paginationComp.css
@@ -1,5 +1,6 @@
 .ag-paging-panel {
     display: flex;
+    align-items: center;
     height: var(--ag-pagination-panel-height);
     border-top: var(--ag-footer-row-border);
     overflow: auto hidden;
@@ -45,7 +46,8 @@
 }
 
 :where(.ag-number-field.ag-paging-number) .ag-input-field-input {
-    text-align: right;
+    text-align: end;
+    padding-inline: 0 var(--ag-input-padding-start);
 }
 
 .ag-paging-number,
